compiler/testData/diagnostics/tests/incompleteCode/incompleteEquals.fir.kt
package a

fun foo(a: Any) = a ==<!SYNTAX!><!>
